src/objects/C3P0_Market__c.object
<CustomObject>
    <fields>
        <fullName>Collection_Date__c</fullName>
        <label>Collection Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>The CKW who created this record</description>
        <inlineHelpText>The CKW who created this record</inlineHelpText>
        <label>CKW Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>3.0 Markets</relationshipLabel>
        <relationshipName>C3P0_Markets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Once a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a week</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday/Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Every Wednesday and Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice a month</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Market_Gps__c</fullName>
        <label>GeoLocation</label>
        <required>true</required>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Market_Size__c</fullName>
        <label>Market Size</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Iterations__c</fullName>
        <defaultValue>3</defaultValue>
        <label>Number of Iterations</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Records_per_Crop__c</fullName>
        <formula>3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Records per Crop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parish__c</fullName>
        <label>Parish</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Peak__c</fullName>
        <label>Peak</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcounty__c</fullName>
        <label>Subcounty</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Village__c</fullName>
        <label>Village</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>3.0 Market</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Number_of_Records_per_Crop__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Peak__c</columns>
        <columns>Subcounty__c</columns>
        <columns>District__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>3.0 Market Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>3.0 Markets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>